--- a/Madagascar/app/src/main/res/layout/activity_main.xml
+++ b/Madagascar/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="@string/title"
+        android:text="Connexion"
         android:textColor="#D500F9"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,188 +20,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/names"
+        android:id="@+id/mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="112dp"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="@string/mail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/gender"
-        android:layout_width="83dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="172dp"
-        android:text="Gender"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.118"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <RadioGroup
-
-        android:id="@+id/radioGroup"
-
-        android:layout_width="205dp"
-
-        android:layout_height="32dp"
-
-        android:layout_marginTop="172dp"
-
-        android:orientation="horizontal"
-
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.834"
-
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RadioButton
-
-            android:id="@+id/radioButton"
-
-            android:layout_width="45dp"
-
-            android:layout_height="33dp"
-
-            android:text="M"
-
-            app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintStart_toStartOf="parent"
-
-            app:layout_constraintTop_toTopOf="parent"
-
-            android:onClick="radioButtonhandler"/>
-
-        <RadioButton
-
-            android:id="@+id/female"
-
-            android:layout_width="45dp"
-
-            android:layout_height="33dp"
-
-            android:text="F"
-
-            app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintHorizontal_bias="0.655"
-
-            app:layout_constraintStart_toStartOf="parent"
-
-            app:layout_constraintTop_toTopOf="parent"
-
-            android:onClick="radioButtonhandler"/>
-
-        <RadioButton
-            android:id="@+id/other"
-            android:layout_width="96dp"
-            android:layout_height="33dp"
-            android:text="Other"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.949"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="radioButtonhandler"/>
-    </RadioGroup>
-
     <EditText
-        android:id="@+id/current_weight"
-        android:layout_width="164dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="260dp"
-        android:ems="10"
-        android:hint="@string/currrent_weight"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.151"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/height"
-        android:layout_width="157dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="260dp"
-        android:ems="10"
-        android:hint="@string/height"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.919"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/goal_weight"
-        android:layout_width="175dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="344dp"
-        android:ems="10"
-        android:hint="@string/goal_weight"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/age"
-        android:layout_width="140dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="348dp"
-        android:ems="10"
-        android:hint="Age"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.863"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/Phone"
+        android:id="@+id/mdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="428dp"
+        android:layout_marginTop="200dp"
         android:ems="10"
-        android:hint="@string/phone"
-        android:inputType="phone"
+        android:hint="@string/mdp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.194"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="500dp"
-        android:ems="10"
-        android:hint="@string/address"
-        android:inputType="text"
-        android:maxLines="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.194"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-        android:id="@+id/conditions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="580dp"
-        android:backgroundTint="#D500F9"
-        android:buttonTint="#D500F9"
-        android:text="@string/conditions"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.964"
+        app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -209,12 +47,12 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="684dp"
+        android:layout_marginTop="328dp"
         android:backgroundTint="#D500F9"
         android:onClick="submitbuttonHandler"
         android:text="SUBMIT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintHorizontal_bias="0.214"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
