--- a/Madagascar/app/src/main/res/layout/activity_main.xml
+++ b/Madagascar/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="112dp"
         android:ems="10"
         android:hint="@string/mail"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:ems="10"
+        android:inputType="textPassword"
         android:hint="@string/mdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
