--- a/Madagascar/app/src/main/res/layout/activity_inscription.xml
+++ b/Madagascar/app/src/main/res/layout/activity_inscription.xml
@@ -50,6 +50,7 @@
         android:layout_marginTop="212dp"
         android:ems="10"
         android:hint="@string/mail"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.169"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +63,7 @@
         android:layout_marginTop="268dp"
         android:ems="10"
         android:hint="@string/mdp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.169"
         app:layout_constraintStart_toStartOf="parent"
