--- a/Madagascar/app/src/main/res/layout/activity_main.xml
+++ b/Madagascar/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,17 @@
     tools:context="com.example.asus.madagascar.view.MainActivity">
 
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Données à afficher ici" />
 
         <LinearLayout
             android:layout_width="match_parent"
