--- a/Madagascar/app/src/main/res/layout/activity_detail_site.xml
+++ b/Madagascar/app/src/main/res/layout/activity_detail_site.xml
@@ -39,8 +39,11 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_above="@id/detail_nom_site"
         android:layout_centerVertical="false"
         app:srcCompat="@drawable/allebaobab" />
+
+
 
 </RelativeLayout>
