--- a/Madagascar/app/src/main/res/layout/activity_site.xml
+++ b/Madagascar/app/src/main/res/layout/activity_site.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listeSite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:padding="10dp"
     tools:context=".SiteActivity">
 
-
     <ListView
+        android:id="@+id/listeView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/textView4"
         android:layout_marginTop="20dp" />
+
 
     <TextView
         android:id="@+id/text_view"
@@ -34,4 +36,4 @@
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp" />
 
-</RelativeLayout>
+</LinearLayout>
