Liste et pop Up details dans android Studio

--- a/Madagascar/app/src/main/res/layout/popup_layout.xml
+++ b/Madagascar/app/src/main/res/layout/popup_layout.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -17,6 +18,12 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:textStyle="bold" />
+    <TextView
+        android:id="@+id/popup_region_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/popup_description_textView"
@@ -24,5 +31,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="14sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="autre image ou video"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/popup_imageView_add"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp" />
+
+
 
 </LinearLayout>
