--- a/Madagascar/app/src/main/res/layout/fragment_settings.xml
+++ b/Madagascar/app/src/main/res/layout/fragment_settings.xml
@@ -11,7 +11,7 @@
         android:id="@+id/firstFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings"
+        android:text="Préférences"
         android:textColor="#43a047"
         android:textSize="40sp"
         android:textStyle="italic|bold"
@@ -26,19 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:padding="10dp"
-        android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English."
+        android:text="Veuillez choisir l'heure à laquelle vous voulez recevoir une suggestion"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Switch
-        android:id="@+id/switchtheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:text="Switch Theme" />
 
 </FrameLayout>
