--- a/Madagascar/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Madagascar/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/notifications"
-        android:title="Notification"
-        android:icon="@drawable/ic_nofitications_foreground"/>
+        android:id="@+id/home"
+        android:title="Accueil"
+        android:icon="@drawable/ic_home_foreground"/>
 
     <item
         android:id="@+id/settings"
