videos et image dans Popu up

--- a/Madagascar/app/src/main/res/layout/list_item_layout.xml
+++ b/Madagascar/app/src/main/res/layout/list_item_layout.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/image_site"
-        android:layout_width="346dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="5dp"
         android:elevation="5dp"
