--- a/Madagascar/app/src/main/res/layout/list_item_layout.xml
+++ b/Madagascar/app/src/main/res/layout/list_item_layout.xml
@@ -7,11 +7,10 @@
 
     <ImageView
         android:id="@+id/image_site"
-        android:layout_width="match_parent"
+        android:layout_width="382dp"
         android:layout_height="100dp"
         android:layout_margin="5dp"
-        android:elevation="5dp"
-         />
+        android:elevation="5dp" />
 
     <TextView
         android:id="@+id/site_name_textView"
@@ -30,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_margin="5dp"
-        android:text="region Site"
+        android:text="description Site"
         android:textColor="@color/black"
         android:textStyle="bold"
 
