--- a/Madagascar/app/src/main/res/layout/popup_layout.xml
+++ b/Madagascar/app/src/main/res/layout/popup_layout.xml
@@ -17,13 +17,14 @@
         android:id="@+id/popup_name_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#1E5320"
         android:textSize="18sp"
         android:textStyle="bold" />
     <TextView
         android:id="@+id/popup_region_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textStyle="bold" />
 
     <TextView
@@ -49,5 +50,29 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/pause_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pause" />
+
+        <Button
+            android:id="@+id/play_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reprendre" />
+
+        <Button
+            android:id="@+id/forward_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Avancer" />
+    </LinearLayout>
 
 </LinearLayout>
