--- a/Madagascar/app/src/main/res/layout/list_item_layout.xml
+++ b/Madagascar/app/src/main/res/layout/list_item_layout.xml
@@ -2,38 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="10dp">
 
     <ImageView
         android:id="@+id/image_site"
-        android:layout_width="382dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="5dp"
         android:elevation="5dp" />
 
-    <TextView
-        android:id="@+id/site_name_textView"
-        android:layout_width="384dp"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="Nom Site"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingStart="10dp">
 
-        />
+        <TextView
+            android:id="@+id/site_name_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nom Site"
+            android:textColor="#1E5320"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-
-    <TextView
-        android:id="@+id/site_description_textView"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:layout_margin="5dp"
-        android:text="description Site"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-
-        />
-
+        <TextView
+            android:id="@+id/site_description_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Description Site"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
-
