--- a/Madagascar/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Madagascar/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/background">
     <item
         android:id="@+id/home"
         android:title="Accueil"
@@ -9,4 +10,9 @@
         android:id="@+id/settings"
         android:title="Settings"
         android:icon="@drawable/ic_launcher_foreground"/>
+
+    <item
+        android:id="@+id/deconnecter"
+        android:title="Logout"
+        android:icon="@drawable/ic_logout_foreground"/>
 </menu>
