--- a/Madagascar/app/src/main/res/values/themes.xml
+++ b/Madagascar/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:itemBackground">@color/background</item>
         <!-- Customize your theme here. -->
     </style>
 
